--- a/photomap/src/Editor.css
+++ b/photomap/src/Editor.css
@@ -1,8 +1,8 @@
 .editor-container {
-  width: 90vw;
-  height: 90vh;
+  width: 70vw;
+  height: 80vh;
 
-  background-color: whitesmoke;
+  background-color: #f8f4ee;
   border-radius: 10px;
 
   position: absolute;
@@ -12,21 +12,27 @@
   /* display: flex;
   flex-direction: column;
   align-items: center; */
+  border-radius: 0.8rem;
+  box-shadow: 0px 0px 21px 5px rgba(34, 60, 80, 0.13);
+  /* box-shadow: 0px -24px 21px 5px rgba(34, 60, 80, 0.2); */
+  border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .editor-close-btn {
   margin: 0.5rem;
   position: absolute;
   right: 0;
-  background-color: red;
-  border: 1px solid black;
+  /* background-color: red; */
+  /* border: 1px solid black; */
+  background-color: #f8f4ee;
   border-radius: 5px;
+  color: black;
 }
 
 .editor-image-container {
   width: 70%;
   height: 60%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-top: 5%;
   display: flex;
   align-items: center;
@@ -59,4 +65,16 @@ textarea {
   color: white;
   height: 1.5rem;
   padding: 0.2rem;
+}
+
+.editor-image-preview {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.editor-submit {
+  background-color: #f8f4ee;
+  color: black;
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
