--- a/photomap/src/Login.css
+++ b/photomap/src/Login.css
@@ -2,15 +2,30 @@
   display: flex;
   height: 10vh;
   align-items: center;
-  background-color: #999;
+  background-color: #ffffff;
   justify-content: space-between;
   padding: 0 2rem;
+  margin-bottom: 1rem;
+  box-shadow: 0px 9px 16px -7px rgba(34, 60, 80, 0.2);
+  border-radius: 0.5rem;
+  position: relative;
 }
-.google-login-btn {
+
+button {
+  font-weight: 600;
+  border: none;
+  width: 5rem;
+  color: #ffffff;
+  background-color: #060606;
   height: 2rem;
+  border-radius: 0.6rem;
+  cursor: pointer;
+}
+
+.google-login-btn {
+  align-self: center;
 }
 .google-logout-btn {
-  height: 2rem;
   align-self: center;
 }
 .login-user-info-container {
@@ -20,14 +35,26 @@
   height: 100%;
 }
 .login-h2 {
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin: 0;
+  font-weight: 600;
   /* padding: 0.2rem; */
 }
 .login-user-info {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  /* gap: 1rem; */
+  font-weight: 700;
+  font-size: 1.4rem;
+  justify-content: center;
 }
 .login-user-name {
+}
+
+.logo {
+  font-weight: 200;
+  justify-self: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
