--- a/photomap/src/Map.css
+++ b/photomap/src/Map.css
@@ -1,4 +1,6 @@
 .map-container {
   width: 60vw;
   height: 80vh;
+  box-shadow: 0px 9px 16px -7px rgba(34, 60, 80, 0.2);
+  border-radius: 10rem;
 }
