--- a/photomap/src/Popup.css
+++ b/photomap/src/Popup.css
@@ -2,14 +2,28 @@
   width: 25rem;
   height: 20rem;
   /* border: 1px solid black; */
-  background-color: white;
+  background-color: #f8f4ee;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 0.7rem;
+  /* box-shadow: 0px 9px 22px 6px rgba(34, 60, 80, 0.13);
+   */
+  box-shadow: 0px 9px 22px 6px rgba(34, 60, 80, 0.27);
+}
+
+.popup-text {
+  margin-top: 0.3rem;
+  width: 80%;
+  /* height: 2rem; */
+  overflow: hidden;
+  /* font-size: 0.8rem; */
+  text-align: center;
 }
 
 .popup-image-container {
-  padding: 1%;
+  margin-top: 1.2rem;
+  /* padding: 1%; */
   width: 70%;
   height: 70%;
   /* border: 2px solid red; */
@@ -19,6 +33,7 @@
 }
 
 .popup-image {
+  border-radius: 0.5rem;
   max-width: 100%;
   max-height: 100%;
   /* object-fit: contain; */
@@ -27,9 +42,33 @@
 
 .popup-close-btn {
   position: absolute;
-  right: 0;
+  right: 0.2rem;
+  top: 0.2rem;
   width: 1rem;
   height: 1rem;
-  background-color: red;
-  border: none;
+  /* background-color: red; */
+  /* border: 1px solid black; */
+  /* border-radius: 0.2rem; */
+  background-color: #f8f4ee;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.popup-btn-container {
+  display: flex;
+  gap: 1rem;
+}
+.popup-btn-container button {
+  width: 2rem;
+  height: 2rem;
+  font-size: 1.2rem;
+  color: black;
+  background-color: #f8f4ee;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
